// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component renders as empty due to currentpage set outside range 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with ellipsis paging results 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      ...
      <ForwardRef(Button)
        aria-label="Click to select page 8 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-8"
        data-testid="undefined-select-page-8"
        disabled={false}
        id="undefined-select-page-8"
        key="8"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        8
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 9 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-9"
        data-testid="undefined-select-page-9"
        disabled={false}
        id="undefined-select-page-9"
        key="9"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        9
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 10 of 50 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-10"
        data-testid="undefined-select-page-10"
        disabled={false}
        id="undefined-select-page-10"
        key="10"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        10
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 11 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-11"
        data-testid="undefined-select-page-11"
        disabled={false}
        id="undefined-select-page-11"
        key="11"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        11
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 12 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-12"
        data-testid="undefined-select-page-12"
        disabled={false}
        id="undefined-select-page-12"
        key="12"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        12
      </ForwardRef(Button)>
      ...
      <ForwardRef(Button)
        aria-label="Click to select page 50 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-50"
        data-testid="undefined-select-page-50"
        disabled={false}
        id="undefined-select-page-50"
        key="50"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        50
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 10 of 50
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={true}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 3 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 2 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-2"
        data-testid="undefined-select-page-2"
        disabled={false}
        id="undefined-select-page-2"
        key="2"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        2
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 3 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-3"
        data-testid="undefined-select-page-3"
        disabled={false}
        id="undefined-select-page-3"
        key="3"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        3
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 1 of 3
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 2 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-2"
        data-testid="undefined-select-page-2"
        disabled={false}
        id="undefined-select-page-2"
        key="2"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        2
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 3 of 3 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-3"
        data-testid="undefined-select-page-3"
        disabled={false}
        id="undefined-select-page-3"
        key="3"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        3
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 3 of 3
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={true}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 2 of 3 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-2"
        data-testid="undefined-select-page-2"
        disabled={false}
        id="undefined-select-page-2"
        key="2"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        2
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 3 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-3"
        data-testid="undefined-select-page-3"
        disabled={false}
        id="undefined-select-page-3"
        key="3"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        3
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 2 of 3
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with styles 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Immutable.Map {},
          },
          Object {
            "type": "return",
            "value": Immutable.Map {},
          },
        ],
      },
      "subscribe": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <StyledEngineProvider
        injectFirst={true}
      >
        <ThemeProvider
          theme={
            Object {
              "breakpoints": Object {
                "between": [Function],
                "down": [Function],
                "keys": Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ],
                "not": [Function],
                "only": [Function],
                "unit": "px",
                "up": [Function],
                "values": Object {
                  "lg": 1200,
                  "md": 900,
                  "sm": 600,
                  "xl": 1536,
                  "xs": 0,
                },
              },
              "components": Object {
                "MUIDataTable": Object {
                  "styleOverrides": Object {
                    "paper": Object {
                      "boxShadow": "none",
                      "margin": 0,
                      "padding": 0,
                    },
                  },
                },
                "MuiButton": Object {
                  "variants": Array [
                    Object {
                      "props": Object {
                        "color": "default",
                        "variant": "contained",
                      },
                      "style": Object {
                        "&:hover": Object {
                          "backgroundColor": "#d5d5d5",
                          "boxShadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                        },
                        "backgroundColor": "#e0e0e0",
                        "boxShadow": "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                        "color": Object {
                          "dark": "#333333",
                          "light": "rgba(0, 0, 0, 0.87)",
                          "main": "#595959",
                        },
                      },
                    },
                  ],
                },
                "MuiFormLabel": Object {
                  "styleOverrides": Object {
                    "root": Object {
                      "overflow": "hidden",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                      "width": "100%",
                    },
                  },
                },
                "MuiIconButton": Object {
                  "styleOverrides": Object {
                    "colorInherit": Object {
                      "color": "none",
                    },
                  },
                },
                "MuiMenuItem": Object {
                  "styleOverrides": Object {
                    "root": Object {
                      "&.selected": Object {
                        "backgroundColor": "#4085C6 !important",
                        "color": "#FFFFFF",
                      },
                    },
                  },
                },
                "MuiUseMediaQuery": Object {
                  "defaultProps": Object {
                    "noSsr": true,
                  },
                },
              },
              "direction": "ltr",
              "graphs": Object {
                "color1": "#d72865",
                "color2": "#1e7d94",
                "color3": "#49075E",
                "color4": "#468fcc",
                "color5": "#f28620",
                "color6": "#333333",
                "color7": "#595959",
              },
              "hexToRGBA": [Function],
              "mixins": Object {
                "toolbar": Object {
                  "@media (min-width:0px)": Object {
                    "@media (orientation: landscape)": Object {
                      "minHeight": 48,
                    },
                  },
                  "@media (min-width:600px)": Object {
                    "minHeight": 64,
                  },
                  "minHeight": 56,
                },
              },
              "palette": Object {
                "accent": Object {
                  "dark": "#2a557d",
                  "light": "#54acff",
                  "main": "#316799",
                },
                "action": Object {
                  "activatedOpacity": 0.12,
                  "active": "rgba(0, 0, 0, 0.54)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "disabledBackground": "rgba(0, 0, 0, 0.12)",
                  "disabledOpacity": 0.38,
                  "focus": "rgba(0, 0, 0, 0.12)",
                  "focusOpacity": 0.12,
                  "hover": "rgba(0, 0, 0, 0.04)",
                  "hoverOpacity": 0.04,
                  "selected": "rgba(0, 0, 0, 0.08)",
                  "selectedOpacity": 0.08,
                },
                "augmentColor": [Function],
                "background": Object {
                  "default": "#fff",
                  "paper": "#fff",
                },
                "common": Object {
                  "black": "#000",
                  "white": "#fff",
                },
                "contrastThreshold": 3,
                "default": Object {
                  "dark": "#333333",
                  "light": "rgba(0, 0, 0, 0.87)",
                  "main": "#595959",
                },
                "divider": "rgba(0, 0, 0, 0.12)",
                "error": Object {
                  "contrastText": "#fff",
                  "dark": "#790000",
                  "light": "#ff0000",
                  "main": "#c80000",
                },
                "getContrastText": [Function],
                "grey": Object {
                  "100": "#f5f5f5",
                  "200": "#eeeeee",
                  "300": "#e0e0e0",
                  "400": "#bdbdbd",
                  "50": "#fafafa",
                  "500": "#9e9e9e",
                  "600": "#757575",
                  "700": "#616161",
                  "800": "#424242",
                  "900": "#212121",
                  "A100": "#f5f5f5",
                  "A200": "#eeeeee",
                  "A400": "#bdbdbd",
                  "A700": "#616161",
                },
                "info": Object {
                  "contrastText": "#fff",
                  "dark": "#01579b",
                  "light": "#03a9f4",
                  "main": "#0288d1",
                },
                "mode": "light",
                "primary": Object {
                  "contrastText": "#fff",
                  "dark": "#3b1a59",
                  "gradient": Object {
                    "diagonal": Object {
                      "background": "linear-gradient(135deg, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                      "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                    },
                    "horizontal": Object {
                      "background": "linear-gradient(to right, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                      "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                    },
                  },
                  "light": "#962A8B",
                  "main": "#51247A",
                },
                "secondary": Object {
                  "contrastText": "#fff",
                  "dark": "#333333",
                  "light": "#f2f2f2",
                  "main": "#595959",
                },
                "success": Object {
                  "contrastText": "#fff",
                  "dark": "#005000",
                  "light": "#00a700",
                  "main": "#007200",
                },
                "text": Object {
                  "disabled": "rgba(0, 0, 0, 0.38)",
                  "primary": "rgba(0, 0, 0, 0.87)",
                  "secondary": "rgba(0, 0, 0, 0.6)",
                },
                "tonalOffset": 0.2,
                "warning": Object {
                  "contrastText": "#fff",
                  "dark": "#542400",
                  "light": "#ff9a57",
                  "main": "#bf5000",
                },
                "white": Object {
                  "main": "#FFFFFF",
                },
              },
              "shadows": Array [
                "none",
                "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
                "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
                "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
              ],
              "shape": Object {
                "borderRadius": 4,
              },
              "spacing": [Function],
              "status": Object {
                "danger": "#f44336",
                "warning": "#ff9800",
              },
              "transitions": Object {
                "create": [Function],
                "duration": Object {
                  "complex": 375,
                  "enteringScreen": 225,
                  "leavingScreen": 195,
                  "short": 250,
                  "shorter": 200,
                  "shortest": 150,
                  "standard": 300,
                },
                "easing": Object {
                  "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                  "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                  "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                  "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                },
                "getAutoHeightDuration": [Function],
              },
              "typography": Object {
                "body1": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 300,
                  "letterSpacing": "0.00938em",
                  "lineHeight": 1.5,
                },
                "body2": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "0.875rem",
                  "fontWeight": 300,
                  "letterSpacing": "0.01071em",
                  "lineHeight": 1.43,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "0.875rem",
                  "fontWeight": 400,
                  "letterSpacing": "0.02857em",
                  "lineHeight": 1.75,
                  "textTransform": "uppercase",
                },
                "caption": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "0.75rem",
                  "fontWeight": 300,
                  "letterSpacing": "0.03333em",
                  "lineHeight": 1.66,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": 14,
                "fontWeightBold": 700,
                "fontWeightLight": 200,
                "fontWeightMedium": 400,
                "fontWeightRegular": 300,
                "h1": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "6rem",
                  "fontWeight": 200,
                  "letterSpacing": "-0.01562em",
                  "lineHeight": 1.167,
                },
                "h2": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "3.75rem",
                  "fontWeight": 200,
                  "letterSpacing": "-0.00833em",
                  "lineHeight": 1.2,
                },
                "h3": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "3rem",
                  "fontWeight": 300,
                  "letterSpacing": "0em",
                  "lineHeight": 1.167,
                },
                "h4": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "2.125rem",
                  "fontWeight": 300,
                  "letterSpacing": "0.00735em",
                  "lineHeight": 1.235,
                },
                "h5": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "1.5rem",
                  "fontWeight": 300,
                  "letterSpacing": "0em",
                  "lineHeight": 1.334,
                },
                "h6": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "1.25rem",
                  "fontWeight": 400,
                  "letterSpacing": "0.0075em",
                  "lineHeight": 1.6,
                },
                "htmlFontSize": 16,
                "overline": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "0.75rem",
                  "fontWeight": 300,
                  "letterSpacing": "0.08333em",
                  "lineHeight": 2.66,
                  "textTransform": "uppercase",
                },
                "pxToRem": [Function],
                "subtitle1": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 300,
                  "letterSpacing": "0.00938em",
                  "lineHeight": 1.75,
                },
                "subtitle2": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                  "fontSize": "0.875rem",
                  "fontWeight": 400,
                  "letterSpacing": "0.00714em",
                  "lineHeight": 1.57,
                },
                "suppressDeprecationWarnings": true,
                "useNextVariants": true,
              },
              "unstable_sx": [Function],
              "unstable_sxConfig": Object {
                "alignContent": Object {},
                "alignItems": Object {},
                "alignSelf": Object {},
                "backgroundColor": Object {
                  "themeKey": "palette",
                  "transform": [Function],
                },
                "bgcolor": Object {
                  "cssProperty": "backgroundColor",
                  "themeKey": "palette",
                  "transform": [Function],
                },
                "border": Object {
                  "themeKey": "borders",
                  "transform": [Function],
                },
                "borderBottom": Object {
                  "themeKey": "borders",
                  "transform": [Function],
                },
                "borderBottomColor": Object {
                  "themeKey": "palette",
                },
                "borderColor": Object {
                  "themeKey": "palette",
                },
                "borderLeft": Object {
                  "themeKey": "borders",
                  "transform": [Function],
                },
                "borderLeftColor": Object {
                  "themeKey": "palette",
                },
                "borderRadius": Object {
                  "style": [Function],
                  "themeKey": "shape.borderRadius",
                },
                "borderRight": Object {
                  "themeKey": "borders",
                  "transform": [Function],
                },
                "borderRightColor": Object {
                  "themeKey": "palette",
                },
                "borderTop": Object {
                  "themeKey": "borders",
                  "transform": [Function],
                },
                "borderTopColor": Object {
                  "themeKey": "palette",
                },
                "bottom": Object {},
                "boxShadow": Object {
                  "themeKey": "shadows",
                },
                "boxSizing": Object {},
                "color": Object {
                  "themeKey": "palette",
                  "transform": [Function],
                },
                "columnGap": Object {
                  "style": [Function],
                },
                "display": Object {},
                "displayPrint": Object {
                  "cssProperty": false,
                  "transform": [Function],
                },
                "flex": Object {},
                "flexBasis": Object {},
                "flexDirection": Object {},
                "flexGrow": Object {},
                "flexShrink": Object {},
                "flexWrap": Object {},
                "fontFamily": Object {
                  "themeKey": "typography",
                },
                "fontSize": Object {
                  "themeKey": "typography",
                },
                "fontStyle": Object {
                  "themeKey": "typography",
                },
                "fontWeight": Object {
                  "themeKey": "typography",
                },
                "gap": Object {
                  "style": [Function],
                },
                "gridArea": Object {},
                "gridAutoColumns": Object {},
                "gridAutoFlow": Object {},
                "gridAutoRows": Object {},
                "gridColumn": Object {},
                "gridRow": Object {},
                "gridTemplateAreas": Object {},
                "gridTemplateColumns": Object {},
                "gridTemplateRows": Object {},
                "height": Object {
                  "transform": [Function],
                },
                "justifyContent": Object {},
                "justifyItems": Object {},
                "justifySelf": Object {},
                "left": Object {},
                "letterSpacing": Object {},
                "lineHeight": Object {},
                "m": Object {
                  "style": [Function],
                },
                "margin": Object {
                  "style": [Function],
                },
                "marginBlock": Object {
                  "style": [Function],
                },
                "marginBlockEnd": Object {
                  "style": [Function],
                },
                "marginBlockStart": Object {
                  "style": [Function],
                },
                "marginBottom": Object {
                  "style": [Function],
                },
                "marginInline": Object {
                  "style": [Function],
                },
                "marginInlineEnd": Object {
                  "style": [Function],
                },
                "marginInlineStart": Object {
                  "style": [Function],
                },
                "marginLeft": Object {
                  "style": [Function],
                },
                "marginRight": Object {
                  "style": [Function],
                },
                "marginTop": Object {
                  "style": [Function],
                },
                "marginX": Object {
                  "style": [Function],
                },
                "marginY": Object {
                  "style": [Function],
                },
                "maxHeight": Object {
                  "transform": [Function],
                },
                "maxWidth": Object {
                  "style": [Function],
                },
                "mb": Object {
                  "style": [Function],
                },
                "minHeight": Object {
                  "transform": [Function],
                },
                "minWidth": Object {
                  "transform": [Function],
                },
                "ml": Object {
                  "style": [Function],
                },
                "mr": Object {
                  "style": [Function],
                },
                "mt": Object {
                  "style": [Function],
                },
                "mx": Object {
                  "style": [Function],
                },
                "my": Object {
                  "style": [Function],
                },
                "order": Object {},
                "overflow": Object {},
                "p": Object {
                  "style": [Function],
                },
                "padding": Object {
                  "style": [Function],
                },
                "paddingBlock": Object {
                  "style": [Function],
                },
                "paddingBlockEnd": Object {
                  "style": [Function],
                },
                "paddingBlockStart": Object {
                  "style": [Function],
                },
                "paddingBottom": Object {
                  "style": [Function],
                },
                "paddingInline": Object {
                  "style": [Function],
                },
                "paddingInlineEnd": Object {
                  "style": [Function],
                },
                "paddingInlineStart": Object {
                  "style": [Function],
                },
                "paddingLeft": Object {
                  "style": [Function],
                },
                "paddingRight": Object {
                  "style": [Function],
                },
                "paddingTop": Object {
                  "style": [Function],
                },
                "paddingX": Object {
                  "style": [Function],
                },
                "paddingY": Object {
                  "style": [Function],
                },
                "pb": Object {
                  "style": [Function],
                },
                "pl": Object {
                  "style": [Function],
                },
                "position": Object {},
                "pr": Object {
                  "style": [Function],
                },
                "pt": Object {
                  "style": [Function],
                },
                "px": Object {
                  "style": [Function],
                },
                "py": Object {
                  "style": [Function],
                },
                "right": Object {},
                "rowGap": Object {
                  "style": [Function],
                },
                "textAlign": Object {},
                "textOverflow": Object {},
                "textTransform": Object {},
                "top": Object {},
                "typography": Object {
                  "cssProperty": false,
                  "themeKey": "typography",
                },
                "visibility": Object {},
                "whiteSpace": Object {},
                "width": Object {
                  "transform": [Function],
                },
                "zIndex": Object {
                  "themeKey": "zIndex",
                },
              },
              "zIndex": Object {
                "appBar": 1100,
                "drawer": 1200,
                "fab": 1050,
                "mobileStepper": 1000,
                "modal": 1300,
                "snackbar": 1400,
                "speedDial": 1050,
                "tooltip": 1500,
              },
              Symbol(mui.nested): false,
            }
          }
        >
          <LocalizationProvider
            dateAdapter={[Function]}
          >
            <WithStyles(PublicationsListPaging)
              classes={Object {}}
              disabled={false}
              onPageChanged={[MockFunction]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 0,
                  "per_page": 20,
                  "to": 0,
                  "total": 0,
                }
              }
            >
              <PublicationsListPaging
                classes={
                  Object {
                    "current": "PublicationsListPaging-current-2",
                    "fakeDisabled": "PublicationsListPaging-fakeDisabled-5",
                    "gridContainer": "PublicationsListPaging-gridContainer-6",
                    "nextPrevButtons": "PublicationsListPaging-nextPrevButtons-3",
                    "nextPrevIcons": "PublicationsListPaging-nextPrevIcons-4",
                    "pageButton": "PublicationsListPaging-pageButton-1",
                    "paginationGridContainer": "PublicationsListPaging-paginationGridContainer-7",
                  }
                }
                disabled={false}
                onPageChanged={[MockFunction]}
                pagingData={
                  Object {
                    "current_page": 1,
                    "from": 0,
                    "per_page": 20,
                    "to": 0,
                    "total": 0,
                  }
                }
                theme={
                  Object {
                    "breakpoints": Object {
                      "between": [Function],
                      "down": [Function],
                      "keys": Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ],
                      "not": [Function],
                      "only": [Function],
                      "unit": "px",
                      "up": [Function],
                      "values": Object {
                        "lg": 1200,
                        "md": 900,
                        "sm": 600,
                        "xl": 1536,
                        "xs": 0,
                      },
                    },
                    "components": Object {
                      "MUIDataTable": Object {
                        "styleOverrides": Object {
                          "paper": Object {
                            "boxShadow": "none",
                            "margin": 0,
                            "padding": 0,
                          },
                        },
                      },
                      "MuiButton": Object {
                        "variants": Array [
                          Object {
                            "props": Object {
                              "color": "default",
                              "variant": "contained",
                            },
                            "style": Object {
                              "&:hover": Object {
                                "backgroundColor": "#d5d5d5",
                                "boxShadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                              },
                              "backgroundColor": "#e0e0e0",
                              "boxShadow": "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                              "color": Object {
                                "dark": "#333333",
                                "light": "rgba(0, 0, 0, 0.87)",
                                "main": "#595959",
                              },
                            },
                          },
                        ],
                      },
                      "MuiFormLabel": Object {
                        "styleOverrides": Object {
                          "root": Object {
                            "overflow": "hidden",
                            "textOverflow": "ellipsis",
                            "whiteSpace": "nowrap",
                            "width": "100%",
                          },
                        },
                      },
                      "MuiIconButton": Object {
                        "styleOverrides": Object {
                          "colorInherit": Object {
                            "color": "none",
                          },
                        },
                      },
                      "MuiMenuItem": Object {
                        "styleOverrides": Object {
                          "root": Object {
                            "&.selected": Object {
                              "backgroundColor": "#4085C6 !important",
                              "color": "#FFFFFF",
                            },
                          },
                        },
                      },
                      "MuiUseMediaQuery": Object {
                        "defaultProps": Object {
                          "noSsr": true,
                        },
                      },
                    },
                    "direction": "ltr",
                    "graphs": Object {
                      "color1": "#d72865",
                      "color2": "#1e7d94",
                      "color3": "#49075E",
                      "color4": "#468fcc",
                      "color5": "#f28620",
                      "color6": "#333333",
                      "color7": "#595959",
                    },
                    "hexToRGBA": [Function],
                    "mixins": Object {
                      "toolbar": Object {
                        "@media (min-width:0px)": Object {
                          "@media (orientation: landscape)": Object {
                            "minHeight": 48,
                          },
                        },
                        "@media (min-width:600px)": Object {
                          "minHeight": 64,
                        },
                        "minHeight": 56,
                      },
                    },
                    "palette": Object {
                      "accent": Object {
                        "dark": "#2a557d",
                        "light": "#54acff",
                        "main": "#316799",
                      },
                      "action": Object {
                        "activatedOpacity": 0.12,
                        "active": "rgba(0, 0, 0, 0.54)",
                        "disabled": "rgba(0, 0, 0, 0.26)",
                        "disabledBackground": "rgba(0, 0, 0, 0.12)",
                        "disabledOpacity": 0.38,
                        "focus": "rgba(0, 0, 0, 0.12)",
                        "focusOpacity": 0.12,
                        "hover": "rgba(0, 0, 0, 0.04)",
                        "hoverOpacity": 0.04,
                        "selected": "rgba(0, 0, 0, 0.08)",
                        "selectedOpacity": 0.08,
                      },
                      "augmentColor": [Function],
                      "background": Object {
                        "default": "#fff",
                        "paper": "#fff",
                      },
                      "common": Object {
                        "black": "#000",
                        "white": "#fff",
                      },
                      "contrastThreshold": 3,
                      "default": Object {
                        "dark": "#333333",
                        "light": "rgba(0, 0, 0, 0.87)",
                        "main": "#595959",
                      },
                      "divider": "rgba(0, 0, 0, 0.12)",
                      "error": Object {
                        "contrastText": "#fff",
                        "dark": "#790000",
                        "light": "#ff0000",
                        "main": "#c80000",
                      },
                      "getContrastText": [Function],
                      "grey": Object {
                        "100": "#f5f5f5",
                        "200": "#eeeeee",
                        "300": "#e0e0e0",
                        "400": "#bdbdbd",
                        "50": "#fafafa",
                        "500": "#9e9e9e",
                        "600": "#757575",
                        "700": "#616161",
                        "800": "#424242",
                        "900": "#212121",
                        "A100": "#f5f5f5",
                        "A200": "#eeeeee",
                        "A400": "#bdbdbd",
                        "A700": "#616161",
                      },
                      "info": Object {
                        "contrastText": "#fff",
                        "dark": "#01579b",
                        "light": "#03a9f4",
                        "main": "#0288d1",
                      },
                      "mode": "light",
                      "primary": Object {
                        "contrastText": "#fff",
                        "dark": "#3b1a59",
                        "gradient": Object {
                          "diagonal": Object {
                            "background": "linear-gradient(135deg, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                            "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                          },
                          "horizontal": Object {
                            "background": "linear-gradient(to right, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                            "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                          },
                        },
                        "light": "#962A8B",
                        "main": "#51247A",
                      },
                      "secondary": Object {
                        "contrastText": "#fff",
                        "dark": "#333333",
                        "light": "#f2f2f2",
                        "main": "#595959",
                      },
                      "success": Object {
                        "contrastText": "#fff",
                        "dark": "#005000",
                        "light": "#00a700",
                        "main": "#007200",
                      },
                      "text": Object {
                        "disabled": "rgba(0, 0, 0, 0.38)",
                        "primary": "rgba(0, 0, 0, 0.87)",
                        "secondary": "rgba(0, 0, 0, 0.6)",
                      },
                      "tonalOffset": 0.2,
                      "warning": Object {
                        "contrastText": "#fff",
                        "dark": "#542400",
                        "light": "#ff9a57",
                        "main": "#bf5000",
                      },
                      "white": Object {
                        "main": "#FFFFFF",
                      },
                    },
                    "shadows": Array [
                      "none",
                      "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
                      "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                      "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
                      "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                      "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                      "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                      "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                      "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                      "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                      "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                      "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                      "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                      "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                      "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                      "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                      "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                      "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                      "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                      "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                      "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                      "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                      "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                      "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                      "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                    ],
                    "shape": Object {
                      "borderRadius": 4,
                    },
                    "spacing": [Function],
                    "status": Object {
                      "danger": "#f44336",
                      "warning": "#ff9800",
                    },
                    "transitions": Object {
                      "create": [Function],
                      "duration": Object {
                        "complex": 375,
                        "enteringScreen": 225,
                        "leavingScreen": 195,
                        "short": 250,
                        "shorter": 200,
                        "shortest": 150,
                        "standard": 300,
                      },
                      "easing": Object {
                        "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                        "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                        "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                        "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                      },
                      "getAutoHeightDuration": [Function],
                    },
                    "typography": Object {
                      "body1": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.00938em",
                        "lineHeight": 1.5,
                      },
                      "body2": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.01071em",
                        "lineHeight": 1.43,
                      },
                      "button": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                        "letterSpacing": "0.02857em",
                        "lineHeight": 1.75,
                        "textTransform": "uppercase",
                      },
                      "caption": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.03333em",
                        "lineHeight": 1.66,
                      },
                      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                      "fontSize": 14,
                      "fontWeightBold": 700,
                      "fontWeightLight": 200,
                      "fontWeightMedium": 400,
                      "fontWeightRegular": 300,
                      "h1": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "6rem",
                        "fontWeight": 200,
                        "letterSpacing": "-0.01562em",
                        "lineHeight": 1.167,
                      },
                      "h2": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "3.75rem",
                        "fontWeight": 200,
                        "letterSpacing": "-0.00833em",
                        "lineHeight": 1.2,
                      },
                      "h3": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "3rem",
                        "fontWeight": 300,
                        "letterSpacing": "0em",
                        "lineHeight": 1.167,
                      },
                      "h4": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "2.125rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.00735em",
                        "lineHeight": 1.235,
                      },
                      "h5": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1.5rem",
                        "fontWeight": 300,
                        "letterSpacing": "0em",
                        "lineHeight": 1.334,
                      },
                      "h6": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 400,
                        "letterSpacing": "0.0075em",
                        "lineHeight": 1.6,
                      },
                      "htmlFontSize": 16,
                      "overline": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.08333em",
                        "lineHeight": 2.66,
                        "textTransform": "uppercase",
                      },
                      "pxToRem": [Function],
                      "subtitle1": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.00938em",
                        "lineHeight": 1.75,
                      },
                      "subtitle2": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                        "letterSpacing": "0.00714em",
                        "lineHeight": 1.57,
                      },
                      "suppressDeprecationWarnings": true,
                      "useNextVariants": true,
                    },
                    "unstable_sx": [Function],
                    "unstable_sxConfig": Object {
                      "alignContent": Object {},
                      "alignItems": Object {},
                      "alignSelf": Object {},
                      "backgroundColor": Object {
                        "themeKey": "palette",
                        "transform": [Function],
                      },
                      "bgcolor": Object {
                        "cssProperty": "backgroundColor",
                        "themeKey": "palette",
                        "transform": [Function],
                      },
                      "border": Object {
                        "themeKey": "borders",
                        "transform": [Function],
                      },
                      "borderBottom": Object {
                        "themeKey": "borders",
                        "transform": [Function],
                      },
                      "borderBottomColor": Object {
                        "themeKey": "palette",
                      },
                      "borderColor": Object {
                        "themeKey": "palette",
                      },
                      "borderLeft": Object {
                        "themeKey": "borders",
                        "transform": [Function],
                      },
                      "borderLeftColor": Object {
                        "themeKey": "palette",
                      },
                      "borderRadius": Object {
                        "style": [Function],
                        "themeKey": "shape.borderRadius",
                      },
                      "borderRight": Object {
                        "themeKey": "borders",
                        "transform": [Function],
                      },
                      "borderRightColor": Object {
                        "themeKey": "palette",
                      },
                      "borderTop": Object {
                        "themeKey": "borders",
                        "transform": [Function],
                      },
                      "borderTopColor": Object {
                        "themeKey": "palette",
                      },
                      "bottom": Object {},
                      "boxShadow": Object {
                        "themeKey": "shadows",
                      },
                      "boxSizing": Object {},
                      "color": Object {
                        "themeKey": "palette",
                        "transform": [Function],
                      },
                      "columnGap": Object {
                        "style": [Function],
                      },
                      "display": Object {},
                      "displayPrint": Object {
                        "cssProperty": false,
                        "transform": [Function],
                      },
                      "flex": Object {},
                      "flexBasis": Object {},
                      "flexDirection": Object {},
                      "flexGrow": Object {},
                      "flexShrink": Object {},
                      "flexWrap": Object {},
                      "fontFamily": Object {
                        "themeKey": "typography",
                      },
                      "fontSize": Object {
                        "themeKey": "typography",
                      },
                      "fontStyle": Object {
                        "themeKey": "typography",
                      },
                      "fontWeight": Object {
                        "themeKey": "typography",
                      },
                      "gap": Object {
                        "style": [Function],
                      },
                      "gridArea": Object {},
                      "gridAutoColumns": Object {},
                      "gridAutoFlow": Object {},
                      "gridAutoRows": Object {},
                      "gridColumn": Object {},
                      "gridRow": Object {},
                      "gridTemplateAreas": Object {},
                      "gridTemplateColumns": Object {},
                      "gridTemplateRows": Object {},
                      "height": Object {
                        "transform": [Function],
                      },
                      "justifyContent": Object {},
                      "justifyItems": Object {},
                      "justifySelf": Object {},
                      "left": Object {},
                      "letterSpacing": Object {},
                      "lineHeight": Object {},
                      "m": Object {
                        "style": [Function],
                      },
                      "margin": Object {
                        "style": [Function],
                      },
                      "marginBlock": Object {
                        "style": [Function],
                      },
                      "marginBlockEnd": Object {
                        "style": [Function],
                      },
                      "marginBlockStart": Object {
                        "style": [Function],
                      },
                      "marginBottom": Object {
                        "style": [Function],
                      },
                      "marginInline": Object {
                        "style": [Function],
                      },
                      "marginInlineEnd": Object {
                        "style": [Function],
                      },
                      "marginInlineStart": Object {
                        "style": [Function],
                      },
                      "marginLeft": Object {
                        "style": [Function],
                      },
                      "marginRight": Object {
                        "style": [Function],
                      },
                      "marginTop": Object {
                        "style": [Function],
                      },
                      "marginX": Object {
                        "style": [Function],
                      },
                      "marginY": Object {
                        "style": [Function],
                      },
                      "maxHeight": Object {
                        "transform": [Function],
                      },
                      "maxWidth": Object {
                        "style": [Function],
                      },
                      "mb": Object {
                        "style": [Function],
                      },
                      "minHeight": Object {
                        "transform": [Function],
                      },
                      "minWidth": Object {
                        "transform": [Function],
                      },
                      "ml": Object {
                        "style": [Function],
                      },
                      "mr": Object {
                        "style": [Function],
                      },
                      "mt": Object {
                        "style": [Function],
                      },
                      "mx": Object {
                        "style": [Function],
                      },
                      "my": Object {
                        "style": [Function],
                      },
                      "order": Object {},
                      "overflow": Object {},
                      "p": Object {
                        "style": [Function],
                      },
                      "padding": Object {
                        "style": [Function],
                      },
                      "paddingBlock": Object {
                        "style": [Function],
                      },
                      "paddingBlockEnd": Object {
                        "style": [Function],
                      },
                      "paddingBlockStart": Object {
                        "style": [Function],
                      },
                      "paddingBottom": Object {
                        "style": [Function],
                      },
                      "paddingInline": Object {
                        "style": [Function],
                      },
                      "paddingInlineEnd": Object {
                        "style": [Function],
                      },
                      "paddingInlineStart": Object {
                        "style": [Function],
                      },
                      "paddingLeft": Object {
                        "style": [Function],
                      },
                      "paddingRight": Object {
                        "style": [Function],
                      },
                      "paddingTop": Object {
                        "style": [Function],
                      },
                      "paddingX": Object {
                        "style": [Function],
                      },
                      "paddingY": Object {
                        "style": [Function],
                      },
                      "pb": Object {
                        "style": [Function],
                      },
                      "pl": Object {
                        "style": [Function],
                      },
                      "position": Object {},
                      "pr": Object {
                        "style": [Function],
                      },
                      "pt": Object {
                        "style": [Function],
                      },
                      "px": Object {
                        "style": [Function],
                      },
                      "py": Object {
                        "style": [Function],
                      },
                      "right": Object {},
                      "rowGap": Object {
                        "style": [Function],
                      },
                      "textAlign": Object {},
                      "textOverflow": Object {},
                      "textTransform": Object {},
                      "top": Object {},
                      "typography": Object {
                        "cssProperty": false,
                        "themeKey": "typography",
                      },
                      "visibility": Object {},
                      "whiteSpace": Object {},
                      "width": Object {
                        "transform": [Function],
                      },
                      "zIndex": Object {
                        "themeKey": "zIndex",
                      },
                    },
                    "zIndex": Object {
                      "appBar": 1100,
                      "drawer": 1200,
                      "fab": 1050,
                      "mobileStepper": 1000,
                      "modal": 1300,
                      "snackbar": 1400,
                      "speedDial": 1050,
                      "tooltip": 1500,
                    },
                    Symbol(mui.nested): false,
                  }
                }
              >
                <span
                  className="publicationsListControls empty"
                />
              </PublicationsListPaging>
            </WithStyles(PublicationsListPaging)>
          </LocalizationProvider>
        </ThemeProvider>
      </StyledEngineProvider>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`PublicationsListPaging renders  should render buttons with zero total pages 1`] = `
<ForwardRef(Button)
  aria-label="Click to select page test of 0 result pages"
  className="paging-button"
  color="inherit"
  data-analyticsid="undefined-select-page-test"
  data-testid="undefined-select-page-test"
  disabled={false}
  id="undefined-select-page-test"
  onClick={[Function]}
  size="small"
  sx={
    Object {
      "flex": "1 0 auto",
      "height": "32px",
      "margin": "0 2px",
      "minHeight": "32px",
      "minWidth": "32px",
    }
  }
  variant="text"
>
  test
</ForwardRef(Button)>
`;
